--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 
-
   *{
     font-family: 'Raleway', sans-serif;
     box-sizing:border-box;
@@ -13,7 +12,6 @@
 }
 
 body{margin: 0px;}
-
 
 /* Navigation bar block //////////////////////////////////////////*/
 
@@ -129,7 +127,6 @@ body{margin: 0px;}
 
   .rechercher_icon{display: none;}
 
-
 /* Filter list block ///////////////////////////////////////////*/
 
 .filter_list
@@ -173,7 +170,6 @@ body{margin: 0px;}
     background-color: #DEEBFF;
     border: solid #DEEBFF;
   }
-  
 
 /*///////////////////////////////////////////////////////////*/
   .fa-money-bill-wave     /*icon class pour Economique*/
@@ -210,7 +206,6 @@ body{margin: 0px;}
     color: black;
   }
 
-
 /*///////////////////////////////////////////////////////////*/
    .fa-child     /*icon class pour Familiale*/
   {
@@ -245,7 +240,6 @@ body{margin: 0px;}
     padding-left: 38px; 
     color: black;
   }
-
 
 /*///////////////////////////////////////////////////////////*/
    .fa-heart     /*icon class pour Romantique*/
@@ -317,7 +311,6 @@ body{margin: 0px;}
     color: black;
   }
 
-
 /* Info block /////////////////////////////////////////////////////////*/
   .fa-info
   {
@@ -340,7 +333,6 @@ body{margin: 0px;}
     margin-top: 0px;
   }
   
-  
   /*///Hebergement & activities results///////////////////*/
   .hebergement_and_activities_results
   {
@@ -348,7 +340,6 @@ body{margin: 0px;}
     align-content: center;
     column-gap: 20px;
   }
-
 
 /* Hebergement à Marseille photo block ///////////////////////////////////////////*/
 
@@ -367,7 +358,7 @@ body{margin: 0px;}
     padding-right: 31px;
     padding-bottom: 30px;
     margin-top: px;
-    margin-bottom: 11px;
+    margin-bottom: 30px;
     padding-top: 11px;
     box-sizing: content-box;
   }
@@ -402,16 +393,13 @@ body{margin: 0px;}
     margin-bottom: 31px;
 }
 
-
 /*///////////////////////////////////////////////////////////*/
     /*All grey stars*/
-
 
   .fa-star
   {
   font-size: small;
   }
-
 
  .grey
   {
@@ -430,7 +418,6 @@ body{margin: 0px;}
 
   .auberge_pic
   {
-
     width: 100%;
     height: 80px;
     object-fit: cover;
@@ -439,7 +426,6 @@ body{margin: 0px;}
     border-radius: 15px 15px 0px 0px;
     border: 4px solid #ffff;
   }
-
   
   .auberge_bloc_text_and_stars 
   {
@@ -475,7 +461,6 @@ body{margin: 0px;}
    font-size: 12px;
   }
 
-
 /*///////////////////////////////////////////////////////////*/
        /*Image block - Hôtel du port*/
 
@@ -495,7 +480,6 @@ body{margin: 0px;}
     border-radius: 15px 15px 0px 0px;
     border: 4px solid #ffff;
   }
-  
 
   .port_bloc_text_and_stars 
   {
@@ -529,7 +513,6 @@ body{margin: 0px;}
     padding-top: 2px;
    font-size: 12px;
   }
-
 
 /*///////////////////////////////////////////////////////////*/
         /*Image block - Hôtel les mouettes*/
@@ -634,7 +617,6 @@ body{margin: 0px;}
    font-size: 12px;
   }
 
-
 /*///////////////////////////////////////////////////////////*/
        /*Image block - Hôtel Le Panier*/
  
@@ -686,7 +668,6 @@ body{margin: 0px;}
     padding-top: 2px;
    font-size: 12px;
   }
-
 
 /*///////////////////////////////////////////////////////////*/
         /*Image block - Hôtel chez Amina*/
@@ -752,7 +733,6 @@ body{margin: 0px;}
 /*///// Plus populaire photo block ///////    //////   //////    //////*/
 /*///// Plus populaire photo block ///////    //////   //////    //////*/
 /*///// Plus populaire photo block ///////    //////   //////    //////*/
-  
 
   .title_and_graph
   {
@@ -833,15 +813,14 @@ body{margin: 0px;}
     color: #0065FC;
   }
   
-.soleil_bloc_text_and_stars p strong
+  .soleil_bloc_text_and_stars p strong
   {
    
    font-weight: bold;
    font-size: 12px;
   }
 
-
-.soleil_bloc_text_and_stars p
+  .soleil_bloc_text_and_stars p
   {
    font-size: 12px;
   }
@@ -967,7 +946,6 @@ body{margin: 0px;}
    font-size: 12px;
   }
 
-
 /*///////////////////////////////////////////////////////////*/
   .afficher_plus      /*Read more link*/
   {
@@ -980,16 +958,21 @@ body{margin: 0px;}
 /* Activites à Marseille photo block ////////////////////////////////////////////////////////////////*/
 /* Activites à Marseille photo block ////////////////////////////////////////////////////////////////*/
 
-
 .activities_results
   {
     display: flex;
     flex-direction: row;
+    align-items: flex-end;
     background-color: none;
     border-radius: 15px;
     padding: 0px 0px 20px 0px;
     width: 100%;
-    /* margin-left: 50px; */
+    column-gap: 25px;
+  }
+  
+  #activities_title
+  {
+    font-size: 16px;
   }
   
   .bloc_vieuxPort_pomegues_and_Frioul
@@ -997,18 +980,19 @@ body{margin: 0px;}
     display: flex;
     flex-direction: row;
     margin-top: px;
-    margin-right: 25px;
     margin-left: 0px;
     width: 50%;
+    column-gap: 25px;
   }
   
   .bloc_calanques_notreDame_and_Longchamp
   {
     display: flex;
     flex-direction: row;
-    margin-top: 60px;
+    margin-top: 30px;
     width: 50%;
     margin-right: 0px;
+    column-gap: 25px;
   }
   
   .bloc_pomegues_and_Frioul
@@ -1021,7 +1005,6 @@ body{margin: 0px;}
     width: 100%;
   }
   
-
 /*///////////////////////////////////////////////////////////*/
   /*Image block - Vieux Port*/
   .vieuxPort_pic
@@ -1048,7 +1031,7 @@ body{margin: 0px;}
   
   .vieuxPort_pic_and_text
   {
-    margin-right: 25px;
+    /* margin-right: 25px; */
     width: 100%;
     filter: drop-shadow(1px 1px 10px #4444442e);
   }
@@ -1135,8 +1118,8 @@ body{margin: 0px;}
   
   .calanques_pic_text
   {
-    margin-right: 25px;    
-    width: 100%;   
+    /* margin-right: 25px; */
+    width: 100%;
     filter: drop-shadow(1px 1px 10px #4444442e);
   }
 
@@ -1228,15 +1211,12 @@ body{margin: 0px;}
    line-height: 25px;
   }
 
-
-
   /*////////////////////////////////////////////////////////////////*/
   /*////////////////////////////////////////////////////////////////*/
   /*////////////////////////////////////////////////////////////////*/
   /*////////////////////////////////////////////////////////////////*/
   /*////////////////////////////////////////////////////////////////*/  
  
-
  @media only screen and (max-width: 992px) {
 
 /*/////////////////////////Recherche//////////////////////////*/
@@ -1280,10 +1260,37 @@ body{margin: 0px;}
 .title_and_graph
 {
   justify-content: space-between;
-
 }
 
+/*////////////////Activites a Marseille///////////////////*/
 
+.activities_results
+{
+ flex-direction: column;
+ width: 100%;
+}
+
+.bloc_vieuxPort_pomegues_and_Frioul, .bloc_calanques_notreDame_and_Longchamp
+{
+ width: 100%; 
+}
+
+.vieuxPort_pic_and_text, .bloc_pomegues_and_Frioul, 
+.calanques_pic_text, .notreDame_and_Longchamp
+{
+ width: 50%;
+}
+
+.bloc_pomegues_and_Frioul{margin-top: 50px;}
+
+.bloc_calanques_notreDame_and_Longchamp 
+{
+flex-direction: row-reverse;
+}
+
+.ilesFrioul_pic {object-position: 48% 35%;}
+.fortPomegues_pic {object-position: 48% 48%;}
+.Longchamp_pic {object-position: 48% 40%;}
 
  }
 
@@ -1349,7 +1356,6 @@ body{margin: 0px;}
  .lien_activite
   {
    margin-left: 35%;    
-
   }
 
  .lien_hebergement 
@@ -1387,7 +1393,6 @@ body{margin: 0px;}
  {
   display: none;
  }
-
 
  #search_section 
   {
@@ -1440,13 +1445,11 @@ body{margin: 0px;}
   .bloc_cannebiere_port_Mouettes
   {
   flex-direction:column;
-  align-content:space-around;
   }
 
  .bloc_mere_panier_amina
   {
   flex-direction:column;
-  align-items:center;
   }
 
 /*////////////////Les plus Populaires///////////////////*/
@@ -1458,10 +1461,8 @@ body{margin: 0px;}
   margin-bottom: 0px;
   }
 
- .title_and_graph
-  {
-  justify-content: space-betwee;
-  }
+/*////////////////Activites a Marseille///////////////////*/
+
 
 
  }
